[gd_scene load_steps=3 format=3 uid="uid://buq1w8x0y7x0q"]

[ext_resource type="PackedScene" uid="uid://c5w2h7q3g6y0x" path="res://Scenes/UserInfoDisplay.tscn" id="2_component"]
[ext_resource type="Script" path="res://Scripts/Menus/convoy_cargo_menu.gd" id="1_cargo_script"]

[node name="ConvoyCargoMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cargo_script")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.1, 0.8)

[node name="MainVBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="TitleLabel" type="Label" parent="MainVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
horizontal_alignment = 0

[node name="UserInfoDisplay" parent="MainVBox" instance=ExtResource("2_component")]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="MainVBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="CargoItemsVBox" type="VBoxContainer" parent="MainVBox/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BackButton" type="Button" parent="MainVBox"]
layout_mode = 2
size_flags_horizontal = 4
text = "Back"